# disease_02

./: .env.example  .gitignore  README.md  environment-common.yml  environment-linux.yml  environment-macos.yml  pyproject.toml
configs/: config.yaml
configs/data/: aihub_apple.yaml  aihub_combined.yaml  aihub_pear.yaml
configs/experiment/: defect_baseline.yaml  detector_baseline.yaml  fireblight_baseline.yaml
configs/model/: classifier_multipart.yaml  classifier_resnet18.yaml  detector_fasterrcnn.yaml
configs/trainer/: local_cpu.yaml  ubuntu_gpu.yaml
docs/plans/: 2026-04-21-disease-detection-phase1-plan.md
scripts/: download_aihub.sh  evaluate.py  extract_aihub.py  preprocess.py  run_labeling.py  sync_to_ubuntu.sh  train_classifier.py  train_detector.py
src/disease_detection/: __init__.py
src/disease_detection/data/: aihub.py  classification_dataset.py  detection_dataset.py  transforms.py
src/disease_detection/eval/: inference.py  metrics.py
src/disease_detection/labeling/: batch_label.py  prompts.py  vlm_client.py
src/disease_detection/models/: classifier.py  detector.py  multipart_classifier.py  pipeline.py
src/disease_detection/utils/: io.py  seeding.py
tests/: conftest.py  test_data.py  test_eval.py  test_labeling.py  test_models.py  test_pipeline.py  test_scripts.py  test_utils.py
tests/fixtures/: dummy_vlm_labels.jsonl
tests/fixtures/dummy_aihub/annotations/: V006_80_0_00_01_05_25_0_b06_20201005_0001_S01_1.jpg.json  V006_80_1_05_02_04_22_2_5790y_20201013_1.JPG.json  sample1.json
